@@ -35,6 +35,7 @@ from .statistics.factorial import factorial
 from .statistics.choose import choose
 from .statistics.normal import normal
 from .statistics.binomial import binomial
+from .statistics.bernoulli import bernoulli
 from .statistics.t_test import t_test
 from .statistics.chi_squared_dist_table import chi_squared_dist_table
 
